<resources>
    <string name="app_name">Lyte</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_contact_edit">Add new contact</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_message">Type your message</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_attach">Attach</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>

    <string name="select_camera">Take picture</string>
    <string name="select_gallery">Select from gallery</string>
    <string name="select_picture">Select picture</string>

    <string name="message_permission_denied_external_storage">External storage permission denied.</string>
    <string name="button_settings">Allow</string>
    <string name="can_not_capture_photo">Can\'t capture photo</string>
    <string name="no_camera">Camera not available</string>
    <string name="name_format">%1$s %2$s</string>
    <string name="share_via">Share via</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_with_mobile">Login with Mobile</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login">Login</string>
</resources>
