<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="in.ceeq.alec.databinding.LoginViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <in.ceeq.alec.utils.ui.TextViewPlus
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/app_name"
                />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:onClick="@{loginViewModel::onEmailLogin}"
                android:text="@string/login_with_email"/>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:onClick="@{loginViewModel::onMobileLogin}"
                android:text="@string/login_with_mobile"/>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:onClick="@{loginViewModel::onGoogleLogin}"
                android:text="@string/login_with_google"/>

        </LinearLayout>
    </LinearLayout>
</layout>
