<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="contactEditViewModel"
            type="in.ceeq.lyte.databinding.ContactEditViewModel"/>

        <import type="android.view.View"/>

    </data>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:visibility="@{contactEditViewModel.progressViewVisible ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/my_image_view"
                tools:visibility="visible"/>

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/my_image_view"
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:background="@color/bg_contact_image"
                app:fresco="@{contactEditViewModel.profilePicUrl}"
                app:layout_constraintDimensionRatio="w,16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:placeholderImage="@drawable/ic_person_white_24dp"
                app:srcCompat="@drawable/ic_person_white_24dp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/list_image_height_width"
                android:layout_height="@dimen/list_image_height_width"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:padding="@dimen/activity_horizontal_margin"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="@+id/my_image_view"
                app:layout_constraintEnd_toEndOf="@+id/my_image_view"
                app:srcCompat="@drawable/ic_photo_camera_white_24dp"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideline_l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideline_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/activity_horizontal_margin"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline_l"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout"
                app:srcCompat="@drawable/ic_person_black_24dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="@+id/guideline_r"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/my_image_view">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_save"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={contactEditViewModel.name}"/>

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:paddingRight="@dimen/activity_horizontal_margin"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="@+id/guideline_l"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
                app:srcCompat="@drawable/ic_call_black_24dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="@+id/guideline_r"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_mobile"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_save"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:text="@={contactEditViewModel.mobile}"/>
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:paddingRight="@dimen/activity_horizontal_margin"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
                app:layout_constraintStart_toStartOf="@+id/guideline_l"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout3"
                app:srcCompat="@drawable/ic_mail_black_24dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/guideline_r"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_save"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={contactEditViewModel.email}"/>

            </android.support.design.widget.TextInputLayout>
        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</layout>
